--- a/Main/css/main.css
+++ b/Main/css/main.css
@@ -8,7 +8,7 @@ body {
   margin: 0;
   color: white;
   background: #19191c;
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
 }
 
 .title {
@@ -98,8 +98,8 @@ ul a li .content span {
 ul a li:hover {
   -webkit-transition: ease-in;
   transition: ease-in;
-  -webkit-transition-duration: .2s;
-          transition-duration: .2s;
+  -webkit-transition-duration: 0.2s;
+          transition-duration: 0.2s;
   background-color: #525255a1;
 }
 /*# sourceMappingURL=main.css.map */
